# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cmd_interface.py  diff_builder.py  diff_generator.py  main_diff.py  parsers.py
gendiff/code/: gendiff_main.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/gendiff/: main.py  parsers.py
gendiff/gendiff_main/: main.py
gendiff/scripts/: gendiff.py  gendiff_script.py
hexlet_python_package/scripts/: gendiff_script.py
tests/: test_gendiff.py
